Fix weird flicker over name id.

--- a/src/App.css
+++ b/src/App.css
@@ -150,15 +150,15 @@ button:focus {
   background-repeat: no-repeat;
   background-size: 100% 0.05em;
   background-position: 0 90%;
-  transition: background-size 0.25s ease-in;
+  transition: background-image 0.25s ease-in;
   font-weight: 400;
   font-style: italic;
 }
 
 #name:hover, #name:active, #name:focus {
   /* background-size: 100% 88%; */
-  background-size: 100% 0.05em;
-  background-position: 0 90%;
+  /* background-size: 100% 0.05em; */
+  /* background-position: 0 90%; */
   color: #fff;
   /* font-weight: bold; */
   /* font-style: normal; */
